syntax = "proto3";

package sonarlint.intellij;

// The java package can be changed without breaking compatibility.
// it impacts only the generated Java code.
option java_package = "org.sonarlint.intellij.proto";
option optimize_for = SPEED;

message Findings {
    repeated Finding finding = 1;

    message Finding {
        // used for matching
        string serverFindingKey = 1;
        string ruleKey = 2;
        int32 line = 3;
        string message = 4;
        int32 checksum = 5;

        // values carried forward
        int64 introductionDate = 7;
        bool resolved = 8;
    }
}

message StorageIndex {
    map<string, string> mapped_path_by_key = 1;
}
